# mosaicatcher-pipeline

./: .bumpversion.cfg  .gitattributes  .gitattributes_bak  .gitignore  .gitlab-ci.yml  .gitlab-ci_ok.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .gitpod.yml.bak  .panoptes.db  .pre-commit-config.yaml  .snakemake  .snakemake-workflow-catalog.yml  :  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  LICENSE.md  QWEN.md  README.md  SVcalling.R  Snake.config-singularity.json  Snake.config.json  Snake.config_cstb.yaml  Snake.config_embl.yaml  Snake.config_embl_chr.yaml  Snakefile  Snakefile_StrandPhaseR  Snakefile_lite.smk  Snakefile_lite_chr.smk  Snakefile~  StrandPhaseR.config  TEST_EXAMPLE_DATA  TEST_OUTPUT  WCcount.R  _BACKUP_63224.gitignore  _BASE_63224.gitignore  (+35 more)
.claude/: settings.json
.github/: ISSUE_TEMPLATE  dependabot.yaml
afac/: DL_scNOVA.dev.py  Snakefile_cleaning_bam.smk  StrandPhaseR_pipeline.R  Untitled.ipynb  alice_binning.ipynb  bamtofastq.sh  bcftools_ploidy.py.ipynb  change-log-builder.sh  chrxy_analysis.ipynb  chrxy_analysis.py  compare_tf1_tf2_results.py  compute_gc_windows.py.ipynb  convert_strandphaser_input.R  convert_tf_model.py  counts_to_ucsc_bed.py  dev.py.ipynb  dev_log_useful.py  draft.py  facount_bedtools_gc.sh  filter_bad_cells.py  gitpod_prepa.sh  handle_selected.py  haplotag.Table.snakemake.R  haplotagProbs.snakemake.R  hgsvc_samples_symlink.py  input_data.npy  list_publishdir.txt  lite_mosaic_count.py  load_model_tf2.py  mosaiClassifier.snakemake.R  mosaiClassifier_call.snakemake.R  mosaicatcher_storage.py.ipynb  mosaiclassifier_arbigent_flat.R  paper_fastq_md5.sh  plate_plot.dev.ipynb  ploidy_plots.py.ipynb  ploidy_processing.py.ipynb  plot-clustering.snakemake.R  plot_plate.R  prepare_segments.r  (+24 more)
analysis/: CN_BFG.R  plot_phylo_tree.R
config/: README.md  Snake.config_embl.yaml  conda-environment.yml  config.yaml  config_metadata.yaml  sample_cells.tsv  samples.tsv
docker/: Dockerfile  README.md  mosaic-env.yml
docs/: Bioconda.md  Docker-example.md  Docker.md  IMPLEMENTATION_SUMMARY.md  Output.md  Parameters.md  README.md  README.rst  Singularity.md  Usage.md  canfam-reference-generation.md  genome-registry-refactoring-plan.md  genome-registry-scripts-audit.md  hpc-pipeline-optimization_ongoing.md  migration-notes.md  mm39-notes.md  mosaic_count.md  mosaicatcher-pipeline-rpe-1.md  mosaicatcher-pipeline.md  output.md  parameters.md  pre-commit.md  release-workflow.md  snakemake-caching-migration.md  usage.md  version-management.md  workshop.md
envs/: global.yaml
github-actions-runner/: Dockerfile  Dockerfile-1.8.3.dockerfile  Dockerfile-1.8.3.dockerfile.bak  Dockerfile-1.8.5.dockerfile  Dockerfile-1.8.6.dockerfile  Dockerfile-1.9.0.dockerfile  Dockerfile-1.9.1.dockerfile  Dockerfile-2.0.0.dockerfile  Dockerfile-2.0.1.dockerfile  Dockerfile-2.1.0.dockerfile  Dockerfile-2.1.1.dockerfile  Dockerfile-2.1.2.dockerfile  Dockerfile-2.1.3.dockerfile  Dockerfile-2.2.0.dockerfile  Dockerfile-2.2.1.dockerfile  Dockerfile-2.2.2.dockerfile  Dockerfile-2.2.3.dockerfile  (+15 more)
workflow/scripts/Mosaic/src/: CMakeLists.txt  count.hpp  counter.hpp  distribution.hpp  hmm.hpp  intervals.hpp  iocounts.hpp  ploidy.hpp  program_options.hpp  segmentation.hpp  simulate.hpp  utils.hpp
(+1022 files in other folders)
